prepare theme example conf

--- a/carlae_minimal.conf
+++ b/carlae_minimal.conf
@@ -8,9 +8,9 @@ template: page.html
 keywords: [static, site, generator]
 three_concepts: [':typcn-device-desktop:', ':typcn-user-outline:', ':fas-keyboard:']
 three_desc: [the monitor, the user, and the keyboard]
-concept_color: '#25a36f'
+concept_color: '#ad8150'
 project_url: https://github.com/wcchin/carlae
 project_url_title: go to project page
-theme: skeleton
-carlae_dir: carlae_page
+theme: minimal
+carlae_dir: carlae_page_minimal
 ---
